Day5/liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-test
  namespace: ravi-ns
  labels:
    app: liveness

spec:
  containers:
  - name: liveness
    image: busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
  livenessProbe:
    exec:
      command:
      - cat
      - /tmp/healthy
      initalDelaySeconds: 5
