Day5/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: ravi-ns
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend: 
          serviceName: service1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: service2
          servicePort: 4201
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: ravi-ns
spec:
  selector:
    name: service1 
    ports:
    - name: http
      protocol: TCP
      port: 4200
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ravi-deploy
  labels:
    name: ravi-label
    type: ravi-type
  namespace: ravi-ns
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      name: httpd_ravi
      labels:
        name: ravi-label
        type: ravi-type
      namespace: ravi-ns
    spec:
      containers:
        - name: httpd-demo
          image: yogeshraheja/yogeshk8stest

      nodeSelector:
         type: ravi-type

  replicas: 2
  selector:
    matchLabels:
      name: ravi-label
      type: ravi-type
