Day5/Ingress_only.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: ravi-ns
spec:
   rules:
   - host: foo.bar.com 
     http:
       paths:
       - path: /foo
         backend:
           serviceName: ravi-service
           servicePort: 81
